feature: actualizacion de paz_y_salvos_mid udistrital/sga_documentacion#575
se actualiza controller obtener estudiantes por proyecto coord y se actualiza swagger
