# swagger/swagger.yml
@@ -257,7 +257,7 @@ paths:
     get:
       tags:
       - semaforo
-      description: obtener estudiantes por proyectos del coordinador
+      description: Obtiene los estudiantes de los proyectos del coordinador e incluye información de proyectos asignados
       operationId: SemaforoController.ObtenerEstudiantesProyecto
       parameters:
       - in: path
@@ -281,6 +281,11 @@ paths:
         description: Código del estudiante
         type: string
       - in: query
+        name: idProyecto
+        description: ID del proyecto Oikos
+        type: integer
+        format: int64
+      - in: query
         name: anio
         description: Año de inscripción
         type: integer
@@ -294,12 +299,39 @@ paths:
         "200":
           description: ""
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/models.SemaforoTable'
+            $ref: '#/definitions/models.SemaforoCoordinadorResponse'
         "400":
           description: :id_coordinador is empty
 definitions:
+  models.ProyectoAsignado:
+    title: ProyectoAsignado
+    type: object
+    properties:
+      Codigo:
+        type: string
+      IdOikos:
+        type: integer
+        format: int64
+      Nombre:
+        type: string
+  models.SemaforoCoordinadorResponse:
+    title: SemaforoCoordinadorResponse
+    type: object
+    properties:
+      Limit:
+        type: integer
+        format: int64
+      ProyectosAsignados:
+        type: array
+        items:
+          $ref: '#/definitions/models.ProyectoAsignado'
+      Semaforos:
+        type: array
+        items:
+          $ref: '#/definitions/models.SemaforoTable'
+      TotalCount:
+        type: integer
+        format: int64
   models.SemaforoTable:
     title: SemaforoTable
     type: object
@@ -334,6 +366,8 @@ definitions:
       ObservacionBienestar:
         type: string
       ObservacionCoordinacion:
+        type: string
+      ObservacionFinanciera:
         type: string
       ObservacionLaboratorios:
         type: string
